--- a/services.html
+++ b/services.html
@@ -17,13 +17,13 @@
 </nav>
 <main>
     <ul>
-        <li><span class="company">Medical Services</span>
+        <li><span class="category">Medical Services</span>
         <br>We offer state-of-the art equipment and technology.</li>
-        <li><span class="company">Surgical Services</span>
+        <li><span class="category">Surgical Services</span>
         <br>Full of range of surgical procedures including orthopedics and emergency surgeries.</li>
-        <li><span class="company">Dental Care</span>
+        <li><span class="category">Dental Care</span>
         <br>A dental exam can determine whether your pet needs preventive dental care such as scaling and polishing</li>
-        <li><span class="company">House Calls</span>
+        <li><span class="category">House Calls</span>
         <br>The elderly, physically challenged, 
             and multiple pet households often find our in-home veterinary service helpful and convenient</li>
     </ul>
